--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ configurations {
 task genJaxb {
 	ext.sourcesDir = "${buildDir}/generated-sources/jaxb"
 	ext.classesDir = "${buildDir}/classes/jaxb"
-	ext.schema = "src/main/resources/okayBanking.xsd" ///Users/greyscale/IdeaProjects/OkayBanking/src/main/resources/static/okayBanking.xsd
+	ext.schema = "src/main/resources/okayBanking.xsd"
 
 	outputs.dir classesDir
 
@@ -70,11 +70,14 @@ repositories {
 
 dependencies {
 	//implementation('org.springframework.boot:spring-boot-starter-data-jpa')
-	implementation('org.springframework.boot:spring-boot-starter-security')
+	//implementation('org.springframework.boot:spring-boot-starter-security')
 	implementation('org.springframework.boot:spring-boot-starter-web')
+	implementation('org.springframework.boot:spring-boot-starter-web-services')
 	compile("wsdl4j:wsdl4j:1.6.1")
 	jaxb("org.glassfish.jaxb:jaxb-xjc:2.2.11")
 	compile(files(genJaxb.classesDir).builtBy(genJaxb))
+	compile("javax.faces:jsf-api:1.2_12")
+	compile("javax.faces:jsf-impl:1.2_12")
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	testImplementation('org.springframework.security:spring-security-test')
 }
