--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
 		mavenCentral()
 		maven { url "https://repo.spring.io/snapshot" }
 		maven { url "https://repo.spring.io/milestone" }
+		maven { url "https://repository.jboss.org/nexus/content/repositories/releases" }
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -66,18 +67,22 @@ repositories {
 	mavenCentral()
 	maven { url "https://repo.spring.io/snapshot" }
 	maven { url "https://repo.spring.io/milestone" }
+	maven { url "https://repository.jboss.org/nexus/content/repositories/releases" }
 }
 
 dependencies {
-	//implementation('org.springframework.boot:spring-boot-starter-data-jpa')
-	//implementation('org.springframework.boot:spring-boot-starter-security')
 	implementation('org.springframework.boot:spring-boot-starter-web')
 	implementation('org.springframework.boot:spring-boot-starter-web-services')
+	implementation('org.springframework.boot:spring-boot-starter-jdbc')
+
 	compile("wsdl4j:wsdl4j:1.6.1")
 	jaxb("org.glassfish.jaxb:jaxb-xjc:2.2.11")
 	compile(files(genJaxb.classesDir).builtBy(genJaxb))
 	compile("javax.faces:jsf-api:1.2_12")
 	compile("javax.faces:jsf-impl:1.2_12")
+	compile group: 'jstl', name: 'jstl', version: '1.2'
+	compile group: 'org.richfaces', name: 'ui', version: '3.3.3.Final', ext: 'pom'
+	compile group: 'org.richfaces.framework', name: 'richfaces-impl', version: '3.3.3.Final'
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	testImplementation('org.springframework.security:spring-security-test')
 }
